Fix bug with overflow in todo input

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -110,7 +110,9 @@ ul {
 }
 
 div.todo-input {
-  height: 50px;
+  min-height: 50px;
+  max-height: 200px;
+  overflow-y: auto;
   width: 100%;
   background: none;
   font-size: 1.5em;
@@ -120,7 +122,8 @@ div.todo-input {
   border: none;
   outline: none;
   padding: 0;
-  line-height: 50px;  // This helps vertically align the text
+  line-height: 25px; 
+  resize: none;
 }
 
 div.todo-input:empty:before {
